Fix viewport + scroll bugs on Mobile Safari

--- a/src/app.css
+++ b/src/app.css
@@ -32,7 +32,9 @@ a.hashtag {
 .deck-container {
   width: 100%;
   height: 100vh;
+  height: 100dvh;
   overflow: auto;
+  overflow-x: hidden;
   transition: opacity .1s ease-in-out;
 }
 .deck-container[hidden] {
@@ -60,6 +62,7 @@ a.hashtag {
 }
 .deck.contained {
   overflow: auto;
+  overflow-x: hidden;
   height: 100vh;
 }
 
@@ -416,6 +419,7 @@ button.carousel-dot.active {
   align-self: flex-end;
   max-height: 90vh;
   overflow: auto;
+  overflow-x: hidden;
   background-color: var(--bg-color);
   width: 100%;
   max-width: calc(40em - 50px - 16px);
